--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,6 +117,16 @@ jobs:
     needs: release-please
     secrets: inherit
 
+  pyTermTk-deploy-sandbox-bin:
+    if: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--release_created'] }}
+    name: Deploy pyTermTk Sandbox Binaries
+    uses: ./.github/workflows/release_sandbox_bin.yml
+    needs: release-please
+    needs:
+      - release-please
+      - pyTermTk-deploy-artifacts
+    secrets: inherit
+
   pyTermTk-deploy-docs:
     if: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--release_created'] }}
     name: Deploy pyTermTk Docs
