chore: removed the dash in the setup version to keep it compliant to the pypi release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
             TermTk/TTkCore/cfg.py \
             TermTk/__init__.py
           sed -i \
-            "s|'pyTermTk>=.*',|'pyTermTk>=${_VERSION}',|" \
+            "s|'pyTermTk>=.*',|'pyTermTk>=${_VERSION/-/}',|" \
             setup.*
           cp TermTk/CHANGELOG.md CHANGELOG.md
           git add \
