--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,9 @@
+name: Create Release
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   workflow_dispatch:
   push:
@@ -12,8 +18,6 @@ permissions:
   actions: read
   pages: write
   id-token: write
-
-name: Create Release
 
 env:
   APP_NAME: pyTermTk
