--- a/.github/workflows/release_sandbox_bin.yml
+++ b/.github/workflows/release_sandbox_bin.yml
@@ -45,8 +45,9 @@ jobs:
           mkdir -p sandbox/bin
 
           cd ../
-          find TermTk/  -name "*.py" |
-            sort | xargs tar cvzf pyTermTk-Docs/sandbox/bin/TermTk.tgz
+          find libs/pyTermTk/TermTk  -name "*.py" |
+            sed 's,libs/pyTermTk/,,' |
+            sort | xargs tar cvzf -C libs/pyTermTk pyTermTk-Docs/sandbox/bin/TermTk.tgz
           find tutorial -name '*.py' -o -name '*.json' |
             sort | xargs tar cvzf pyTermTk-Docs/sandbox/bin/tutorial.tgz
           find \
