--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,12 +130,11 @@ jobs:
 
       - name: Upload artifatcs to Release
         shell: bash
-        needs: create-artifact
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
           TAG_NAME: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--tag_name'] }}
         run: |
-          _TMP=${{ needs.create-artifacts.outputs.artifacts_dir }}
+          _TMP=${{ steps.create-artifacts.outputs.artifacts_dir }}
           gh release upload ${TAG_NAME} ${_TMP}/TermTk.tgz
           gh release upload ${TAG_NAME} ${_TMP}/tutorial.tgz
           gh release upload ${TAG_NAME} ${_TMP}/tests.tgz
