--- a/.github/workflows/release_doc.yml
+++ b/.github/workflows/release_doc.yml
@@ -24,7 +24,9 @@ permissions:
 
 jobs:
   gen-docs:
+    # runs-on: ubuntu-latest
     runs-on: self-hosted
+
     steps:
       - uses: actions/checkout@v4
         with:
