--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,9 @@ env:
 
 jobs:
   release-please:
+    # runs-on: ubuntu-latest
     runs-on: self-hosted
+
     outputs:
       rp_out: ${{ toJson(steps.release-please.outputs) }}
     steps:
