--- a/.github/workflows/release_sandbox.yml
+++ b/.github/workflows/release_sandbox.yml
@@ -24,7 +24,9 @@ permissions:
 
 jobs:
   gen-sandbox:
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: self-hosted
+
     steps:
       - uses: actions/checkout@v4
         with:
