--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -38,17 +38,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-
       - name: Build release distributions
         run: |
           # NOTE: put your own distribution build steps here.
           python -m pip install build
           python -m build
-
       - name: Upload distributions
         uses: actions/upload-artifact@v4
         with:
@@ -64,17 +61,18 @@ jobs:
       id-token: write
 
     steps:
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
         with:
           name: release-dists
           path: dist/
-
       - name: check
         shell: bash
         run: |
           ls -laR dist
-
       - name: Publish
         run: |
           python -m pip install twine
