--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -85,5 +85,5 @@ jobs:
           echo '::endgroup::'
 
           echo '::group::Deploy The Package'
-            python -m twine upload --verbose -u ${{ secrets.TWINE_USER }} -p ${{ secrets.TWINE_PASSWORD }} dist/*
+            python -m twine upload --verbose -u ${{ secrets.PYPI_USER }} -p ${{ secrets.PYPI_TOKEN }} dist/*
           echo '::endgroup::'
