chore: fix deploy

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,7 +108,7 @@ jobs:
           echo '::endgroup::'
 
   pyTermTk-deploy-artifacts:
-    if: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--release_created'] }}
+    if: ${{ fromJson(needs.release-please.outputs.rp_out)['libs/TermTk--release_created'] }}
     runs-on: ubuntu-latest
     name: Deploy pyTermTk to github release
     needs: release-please
@@ -160,7 +160,7 @@ jobs:
     secrets: inherit
 
   pyTermTk-deploy-sandbox-bin:
-    if: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--release_created'] }}
+    if: ${{ fromJson(needs.release-please.outputs.rp_out)['libs/TermTk--release_created'] }}
     name: Deploy pyTermTk Sandbox Binaries
     uses: ./.github/workflows/release_sandbox_bin.yml
     needs:
@@ -169,7 +169,7 @@ jobs:
     secrets: inherit
 
   pyTermTk-deploy-docs:
-    if: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--release_created'] }}
+    if: ${{ fromJson(needs.release-please.outputs.rp_out)['libs/TermTk--release_created'] }}
     name: Deploy pyTermTk Docs
     uses: ./.github/workflows/release_doc.yml
     needs:
@@ -178,7 +178,7 @@ jobs:
     secrets: inherit
 
   pyTermTk-publish:
-    if: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--release_created'] }}
+    if: ${{ fromJson(needs.release-please.outputs.rp_out)['libs/TermTk--release_created'] }}
     name: Publish pyTermTk
     uses: ./.github/workflows/python-publish.yml
     with:
@@ -189,7 +189,7 @@ jobs:
     secrets: inherit
 
   # pyTermTk-deploy-build:
-  #   if: ${{ fromJson(needs.release-please.outputs.rp_out)['TermTk--release_created'] }}
+  #   if: ${{ fromJson(needs.release-please.outputs.rp_out)['libs/TermTk--release_created'] }}
   #   name: Deploy pyTermTk to pypi
   #   shell: bash
   #   run: |
