chore: added links in the apps

--- a/apps/dumbPaintTool/pyproject.toml
+++ b/apps/dumbPaintTool/pyproject.toml
@@ -38,7 +38,10 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/ceccopierangiolieugenio/pyTermTk/tree/main/apps/dumbPaintTool"
+Homepage   = "https://github.com/ceccopierangiolieugenio/pyTermTk/tree/main/apps/dumbPaintTool"
+Repository = "https://github.com/ceccopierangiolieugenio/pyTermTk.git"
+Issues     = "https://github.com/ceccopierangiolieugenio/pyTermTk/issues"
+Changelog  = "https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/apps/dumbPaintTool/CHANGELOG.md
 
 [project.scripts]
 dumbPaintTool = "dumbPaintTool:main"
