--- a/apps/ttkDesigner/pyproject.toml
+++ b/apps/ttkDesigner/pyproject.toml
@@ -35,7 +35,10 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/ceccopierangiolieugenio/pyTermTk/tree/main/apps/ttkDesigner"
+Homepage   = "https://github.com/ceccopierangiolieugenio/pyTermTk/tree/main/apps/ttkDesigner"
+Repository = "https://github.com/ceccopierangiolieugenio/pyTermTk.git"
+Issues     = "https://github.com/ceccopierangiolieugenio/pyTermTk/issues"
+Changelog  = "https://github.com/ceccopierangiolieugenio/pyTermTk/blob/main/apps/ttkDesigner/CHANGELOG.md
 
 [project.scripts]
 ttkDesigner = "ttkDesigner:main"
